# xplane-webapi

./: pyproject.toml
xpwebapi/: __init__.py  api.py  rest.py  ws.py
